tests/expectations/compiler/finalize/finalize_fail.out
DCE_ENABLED:
Error [EAST0372006]: function `finalize_no_params` shadowed by
    --> compiler-test:26:5
     |
  26 |     async function finalize_no_params() {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  27 |         increment(values, 0u8, 1u8);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  28 |         increment(account, self.caller, 1u64);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  29 |     }
     |     ^

DCE_DISABLED:
Error [EAST0372006]: function `finalize_no_params` shadowed by
    --> compiler-test:26:5
     |
  26 |     async function finalize_no_params() {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  27 |         increment(values, 0u8, 1u8);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  28 |         increment(account, self.caller, 1u64);
     |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  29 |     }
     |     ^
